@@ -1,6 +1,8 @@
 """Dynamic SearchableText index for dexterity content types
 """
 
+from collective.dexteritytextindexer import utils
+from plone.app.dexterity.behaviors.metadata import IBasic
 import zope.deferredimport
 
 zope.deferredimport.defineFrom(
@@ -10,3 +12,6 @@ zope.deferredimport.defineFrom(
 zope.deferredimport.defineFrom(
     'collective.dexteritytextindexer.directives',
     'searchable', 'SEARCHABLE_KEY')
+
+utils.searchable(IBasic, 'title')
+utils.searchable(IBasic, 'description')
