@@ -54,6 +54,7 @@ setup(name='collective.dexteritytextindexer',
         'plone.indexer',
         'plone.behavior',
         'plone.dexterity',
+        'plone.app.dexterity',
         'plone.supermodel',
         'plone.z3cform',
         'Products.CMFCore',
